--- a/src/html/partials/settings/intro/index.html
+++ b/src/html/partials/settings/intro/index.html
@@ -3,5 +3,5 @@
   to additional features.</p>
 
 <p>
-  <button data-ng-click="go('settings/upgrade', 'slide-left')">Upgrade</button>
+  <button data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_UPGRADE_INTRO, 'slide-left')">Upgrade</button>
 </p>
