--- a/src/html/partials/settings/upgrade/index.html
+++ b/src/html/partials/settings/upgrade/index.html
@@ -26,7 +26,7 @@
           Ermöglichen Sie anderen ebenfalls Fotos zu Ihren Fotorahmen hinzuzufügen.
         </span>
         <span class="settings__item-info-action"
-              data-ng-click="go('settings/upgrade/feature-1', 'true')"
+              data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_UPGRADE_FEATURE1, 'true')"
               data-translate="ACTION_CONTINUE"></span>
       </div>
     </div>
