--- a/src/html/partials/share-gallery/sharing.html
+++ b/src/html/partials/share-gallery/sharing.html
@@ -31,6 +31,6 @@
 <div class="settings__block">
   <div class="settings__item">
     <span class="settings__item-label">{{'SHARING_SEND_CREDENTIALS_VIA_EMAIL' | translate}}</span>
-    <a class="settings__item-action" data-ng-click="go('invite', 'slide-left')">{{'ACTION_SEND_EMAIL' | translate}}</a>
+    <a class="settings__item-action" data-ng-click="navigationService.go(appConstants.STATES.INVITE, 'slide-left')">{{'ACTION_SEND_EMAIL' | translate}}</a>
   </div>
 </div>
