--- a/src/html/partials/start/index.html
+++ b/src/html/partials/start/index.html
@@ -1,7 +1,7 @@
 <!--start view-->
 
 <div class="center">
-  <img class="logo-start" data-ng-click="go('/home', 'slide-left')" src="img/logo_intro.png"/>
+  <img class="logo-start" data-ng-click="navigationService.go(appConstants.STATES.HOME, 'slide-left')" src="img/logo_intro.png"/>
 </div>
 
 
