--- a/src/html/partials/invite/index.html
+++ b/src/html/partials/invite/index.html
@@ -66,7 +66,7 @@
       <p>Your invitation was successfully send!</p>
 
       <p>
-        <button class="btn--blue" data-ng-click="back()">Back</button>
+        <button class="btn--blue" data-ng-click="navigationService.back()">Back</button>
         <button class="btn--blue" data-ng-click="showInvitationForm()">Send Another</button>
       </p>
     </div>
@@ -77,7 +77,7 @@
       <p>Service is temporarily unavailable. Our engineers are working quickly to resolve the issue.</p>
 
       <p>
-        <button class="btn--blue" data-ng-click="back()">Back</button>
+        <button class="btn--blue" data-ng-click="navigationService.back()">Back</button>
       </p>
     </div>
 
