--- a/src/html/partials/settings/index.html
+++ b/src/html/partials/settings/index.html
@@ -1,7 +1,7 @@
 <div class="top">
     <div class="top__inner">
         <h1 class="top__title" data-translate="TITLE_SETTINGS"></h1>
-        <span class="top__icon-back icon-back" data-ng-click="back()"></span>
+        <span class="top__icon-back icon-back" data-ng-click="navigationService.back()"></span>
     </div>
 </div>
 
