--- a/src/html/partials/share-gallery/index.html
+++ b/src/html/partials/share-gallery/index.html
@@ -1,8 +1,8 @@
 <div class="top">
     <div class="top__inner">
         <h1 class="top__title">{{'TITLE_SHARING' | translate}}</h1>
-        <span class="top__icon-back icon-back" data-ng-click="go('edit-gallery', 'slide-right', true)"></span>
-    <span class="float-right" data-ng-click="go('settings', 'slide-left')">
+        <span class="top__icon-back icon-back" data-ng-click="navigationService.go(appConstants.STATES.EDITGALLERY, 'slide-right', true)"></span>
+    <span class="float-right" data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_INTRO, 'slide-left')">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
     </div>
@@ -17,11 +17,11 @@
                 <ul class="settings-menu">
                     <li class="settings-menu__item"
                         data-ng-class="{'active': sharingSection1 == 'sharing' || !sharingSection1}"
-                        data-ng-click="go('share-gallery/sharing', '')">{{'NAVI_SHARING_CREDENTIALS' | translate}}
+                        data-ng-click="navigationService.go(appConstants.STATES.SHAREGALLERY_SHARING, '')">{{'NAVI_SHARING_CREDENTIALS' | translate}}
                     </li>
                     <li class="settings-menu__item"
                         data-ng-class="{'active': sharingSection1 == 'options'}"
-                        data-ng-click="go('share-gallery/options', '')">{{'NAVI_OPTIONS' | translate}}
+                        data-ng-click="navigationService.go(appConstants.STATES.SHAREGALLERY_OPTIONS, '')">{{'NAVI_OPTIONS' | translate}}
                     </li>
                 </ul>
             </div>
