--- a/src/html/partials/share-gallery/not-authorized.html
+++ b/src/html/partials/share-gallery/not-authorized.html
@@ -2,6 +2,6 @@
 
 <p>NOT AUTHORIZED</p>
 
-<p><span class="link" data-ng-click="navigationService.go(appConstants.STATES.LOGIN, 'slide-left')" data-translate="NAVI_GO_LOGIN"></span></p>
+<p><span class="link" data-ng-click="navigationService.go(appConstants.STATES.LOGIN, {animationClass: 'forward'})" data-translate="NAVI_GO_LOGIN"></span></p>
 
-<p><span class="link" data-ng-click="navigationService.go(appConstants.STATES.SIGNIN, 'slide-left')" data-translate="NAVI_GO_SIGNIN"></span></p>
+<p><span class="link" data-ng-click="navigationService.go(appConstants.STATES.SIGNIN, {animationClass: 'forward'})" data-translate="NAVI_GO_SIGNIN"></span></p>
