--- a/src/html/partials/share-gallery/options.html
+++ b/src/html/partials/share-gallery/options.html
@@ -29,7 +29,7 @@
       <p class="settings__item-info-label" data-translate="INFO_FEATURE_UPGRADE">
       </p>
       <span class="settings__item-info-action"
-            data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_UPGRADE_FEATURE1, 'slide-left', true)"
+            data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_UPGRADE_FEATURE1, 'forward', true)"
             data-translate="NAVI_GO_UPGRADE"></span>
     </div>
 
