--- a/src/html/layouts/application.tmpl
+++ b/src/html/layouts/application.tmpl
@@ -30,7 +30,8 @@
 
   <div data-ng-if="message.title" data-message-directive data-message="message" data-message-type="{{message.type}}"></div>
 
-  <div id="container" class="container {{ navigationService.data.animationClass }}">
+  <div id="container" class="container {{ navigationService.stateParams.animationClass }}">
+  xx{{ navigationService.stateParams }}xx
     <div data-ng-class="{'show-ctrls': showCtrls}" class="page {{ pageClass }}  " data-ui-view data-ng-animate-children></div>
   </div>
 
