--- a/src/html/partials/global/top-inner.html
+++ b/src/html/partials/global/top-inner.html
@@ -1,6 +1,6 @@
 <div class="top__inner">
   <span class="top__icon-back icon-back" data-ng-click="navigationService.back()"></span>
-  <span class="float-right" data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_SLIDESHOW, 'slide-left')">
+  <span class="float-right" data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_SLIDESHOW, {animationClass: 'forward'})">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
 </div>
