--- a/src/html/partials/settings/account/index.html
+++ b/src/html/partials/settings/account/index.html
@@ -17,7 +17,7 @@
         <div class="settings__item">
             <span class="settings__item-label" data-translate="LABEL_LOGIN_WITH_DIFFERENT_USER"></span>
             <a class="settings__item-action"
-               data-ng-click="navigationService.go(appConstants.STATES.LOGIN, 'slide-left')" data-translate="NAVI_GO_LOGIN"></a>
+               data-ng-click="navigationService.go(appConstants.STATES.LOGIN, {animationClass: 'forward'})" data-translate="NAVI_GO_LOGIN"></a>
         </div>
     </div>
 
@@ -30,12 +30,12 @@
     <div class="settings__block">
         <div class="settings__item">
             <span class="settings__item-label" data-translate="LABEL_SIGNIN"></span>
-            <a class="settings__item-action" data-ng-click="navigationService.go(appConstants.STATES.SIGNIN, 'slide-left')"
+            <a class="settings__item-action" data-ng-click="navigationService.go(appConstants.STATES.SIGNIN, {animationClass: 'forward'})"
                data-translate="NAVI_GO_SIGNIN"></a>
         </div>
         <div class="settings__item">
             <span class="settings__item-label" data-translate="LABEL_LOGIN"></span>
-            <a class="settings__item-action" data-ng-click="navigationService.go(appConstants.STATES.LOGIN, 'slide-left')"
+            <a class="settings__item-action" data-ng-click="navigationService.go(appConstants.STATES.LOGIN, {animationClass: 'forward'})"
                data-translate="NAVI_GO_LOGIN"></a>
         </div>
         <div class="settings__item">
