--- a/src/html/partials/share-gallery/index.html
+++ b/src/html/partials/share-gallery/index.html
@@ -1,8 +1,8 @@
 <div class="top">
     <div class="top__inner">
         <h1 class="top__title">{{'TITLE_SHARING' | translate}}</h1>
-        <span class="top__icon-back icon-back" data-ng-click="navigationService.go(appConstants.STATES.EDITGALLERY, 'slide-right', true)"></span>
-    <span class="float-right" data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_INTRO, 'slide-left')">
+        <span class="top__icon-back icon-back" data-ng-click="navigationService.go(appConstants.STATES.EDITGALLERY, 'backward', true)"></span>
+    <span class="float-right" data-ng-click="navigationService.go(appConstants.STATES.SETTINGS_INTRO, {animationClass: 'forward'})">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
     </div>
